# habr-c-parser

./: CMakeLists.txt  Dockerfile  README.md  output.csv
src/: csv_writer.c  csv_writer.h  entities.c  entities.h  extractor.c  extractor.h  html_scan.c  html_scan.h  http.c  http.h  main.c  utils.c  utils.h
tests/fixtures/: expected.csv  habr_example.html
